# lab7

./: CMakeLists.txt  main.cpp
Documents/: CMakeLists.txt  document.cpp  document.h  payCheck.cpp  payCheck.h  receipt.cpp  wayBill.cpp  wayBill.h
